ADD-BACK-FRONT: conversation system and socket message event
