# server/src/models/messageModel.js
@@ -12,16 +12,25 @@ export async function createMessagesTable() {
       FROM information_schema.tables
       WHERE table_name = 'messages';
     `);
+                // CREATE TABLE messages (
+            //     id SERIAL PRIMARY KEY,
+            //     sender_id INT NOT NULL,
+            //     FOREIGN KEY (sender_id) REFERENCES users (id),
+            //     receiver_id INT,
+            //     FOREIGN KEY (receiver_id) REFERENCES users (id),
+            //     message VARCHAR(255),
+            //     created_at TIMESTAMPTZ NOT NULL DEFAULT NOW()
+            // );
         if (tableExists.rowCount === 0) {
             const result = await client.query(`
             CREATE TABLE messages (
-                id SERIAL PRIMARY KEY,
-                sender_id INT NOT NULL,
-                FOREIGN KEY (sender_id) REFERENCES users (id),
-                receiver_id INT,
-                FOREIGN KEY (receiver_id) REFERENCES users (id),
-                message VARCHAR(255),
-                created_at TIMESTAMPTZ NOT NULL DEFAULT NOW()
+              id SERIAL PRIMARY KEY,
+              sender_id INT NOT NULL,
+              FOREIGN KEY (sender_id) REFERENCES users (id),
+              conversation_id INT NOT NULL,
+              FOREIGN KEY (conversation_id) REFERENCES conversation (id),
+              message VARCHAR(255),
+              created_at TIMESTAMPTZ NOT NULL DEFAULT NOW()
             );
             `);
           log.info('[messageModel.js]', result, 'messages table have been created');
